misc/STD_red: work-in-progress sync'ing against STD.pm r20027.  And adding more Match()s.  No testing. Regression: "use x;" no longer works above the statement rule (ie, in statementlist and UNIT).
git-svn-id: http://svn.pugscode.org/pugs@20050 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/STD_red/README
+++ b/misc/STD_red/README
@@ -17,8 +17,8 @@ Regex reminders
   regex: /^ <a>+ <b>+ $/
 which transliterate as
   token:  plusTOK{a} and plusTOK{b}
-  rule:   wsp and plusTOK{a} and wsp and plusTOK{b} and wsp  #abstractly
-  rule:           plusTOK{a} and wsp and plusTOK{b}          #in practice
+  rule:   wsp and plusTOK{a} and wsp and plusTOK{b} and wsp  #handwritten rules
+  rule:           plusTOK{a} and wsp and plusTOK{b}          #in token rules #XXX hmm
   regex:  plusRX(lambda{ a }){ plusRX{ b }}
     # but note, <a> can't be a regex - we won't backtrack into it.
 
