misc/STD_red/std.rb: Now executable.  To make it more obvious how to play.
git-svn-id: http://svn.pugscode.org/pugs@20052 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/STD_red/README
+++ b/misc/STD_red/README
@@ -1,8 +1,10 @@
 A ruby transliteration of src/perl6/STD.pm
 
-The release of 1.9.0 (dated late December '07) if required.
+The release of ruby 1.9.0 (dated late December '07) is recommended.
+It may, or may not, also work with ruby 1.8.
 
-
+USAGE
+  ./std.rb
 
 
 
